# clumsy

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  configure.ac
src/: cl_cnf.c  cl_cnf.h  cl_cnf_rep.h  cl_collection.c  cl_collection.h  cl_collection_rep.h  cl_object.c  cl_object.h  cl_object_rep.h  cl_proposition.c  cl_proposition.h  cl_proposition_rep.h  cl_sat.c  cl_sat.h  cl_sat_rep.h  clumsy.c  clumsy.h
src/tests/: cnf.c  collection.c  object.c  proposition.c  sat.c  test1.c  valgrind-wrapper.sh
